<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true">
    <android.support.v7.widget.CardView
        android:id="@+id/card_item"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="#dde6ec"
        android:orientation="vertical"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/mainCard"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:padding="10dp">

        <!--<ImageView-->
            <!--android:id="@+id/mDeletebin"-->
            <!--android:layout_width="47dp"-->
            <!--android:layout_height="28dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginEnd="18dp"-->
            <!--android:src="@drawable/ic_delete" />-->

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_do"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="5dp"
            android:text="@string/enter_note"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/note"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:text="@string/date" />
    </RelativeLayout>


</LinearLayout>


